# desafio-junior-picpay

./: Cargo.toml  docker-compose.yml
db/: v0001__create_people.sql
src/: database.rs  main.rs
