[package]
name = "picpaychall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7.4", features = ["macros"]}
reqwest = {version = "0.11.23", features = ["json","blocking"]}
serde = {version = "1.0.196", features=["derive"]}
sqlx = {version = "0.7.3", features = ["uuid","postgres","time","runtime-tokio","sqlx-postgres","macros"]}
time = {version = "0.3.34", features = ["macros","serde", "formatting","parsing"]}
tokio = {version = "1.35.1", features = ["full"]}
uuid = {vesrion = "1.7.0", features=["serde", "v7"]}

